fix image stretch and positioning

--- a/packages/assets/scss/03-organisms/_page-banner.scss
+++ b/packages/assets/scss/03-organisms/_page-banner.scss
@@ -291,6 +291,7 @@ $text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     position: relative;
     overflow: hidden;
     height: auto;
+    background-color: $c-primary-alt;
 
     @media ($bp-large-extended-min) {
       height: 100%;
@@ -340,13 +341,13 @@ $text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       position: absolute;
       top: 0;
       right: 0;
-      bottom: 1px;
-      left: 500px;
+      bottom: 0;
+      left: 560px;
       background-size: cover;
       background-position: center;
 
       @media (min-width: $max-width) {
-        right: calc(-100vw + #{$max-width});
+        right: -300px;
       }
 
       @media ($bp-large-extended) {
